packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_getter_generation.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2963
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/qwik';

export const App = component$(() => {
    const store = useStore({
        count: 0,
        stuff: 0,
        nested: {
            count: 0
        }
    });
    const signal = useSignal(0);
    return (
        <Cmp
            prop={'true' + 1 ? 'true' : ''}
            count={store.count}
            nested={store.nested.count}
            signal={signal}
            store={store.stuff + 12}
            value={signal.formData?.get('username')}
        >
        </Cmp>
    );
});

export const Cmp = component$((props) => {
    return (
        <>
            <p data-value={props.count}>{props.nested.count}</p>
            <p>Value {props.count}<span></span></p>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0"));
export const Cmp = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,iHAoBhB;AAEH,OAAO,MAAM,oBAAM,iHAOhB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
export const Cmp_component_4ryKJTOKjWE = (props)=>{
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("p", null, {
                "data-value": _fnSignal((p0)=>p0.count, [
                    props
                ], "p0.count")
            }, _fnSignal((p0)=>p0.nested.count, [
                props
            ], "p0.nested.count"), 3, null),
            /*#__PURE__*/ _jsxQ("p", null, null, [
                "Value ",
                _fnSignal((p0)=>p0.count, [
                    props
                ], "p0.count"),
                /*#__PURE__*/ _jsxQ("span", null, null, null, 3, null)
            ], 3, null)
        ]
    }, 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAyB8B,CAAC;IAC3B,qBACI;;0BACI,MAAC;gBAAE,YAAU,kBAAE,GAAM,KAAK;;;+BAAG,GAAM,MAAM,CAAC,KAAK;;;0BAC/C,MAAC;gBAAE;gCAAO,GAAM,KAAK;;;8BAAC,MAAC;;;;AAGnC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    580,
    754
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Cmp } from "./test";
import { _IMMUTABLE } from "@khulnasoft.com/qwik";
import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { useStore } from "@khulnasoft.com/qwik";
export const App_component_ckEPmXZlub0 = ()=>{
    const store = useStore({
        count: 0,
        stuff: 0,
        nested: {
            count: 0
        }
    });
    const signal = useSignal(0);
    return /*#__PURE__*/ _jsxC(Cmp, {
        prop: 'true',
        get count () {
            return store.count;
        },
        get nested () {
            return store.nested.count;
        },
        signal: signal,
        get store () {
            return store.stuff + 12;
        },
        get value () {
            return signal.formData?.get('username');
        },
        [_IMMUTABLE]: {
            prop: _IMMUTABLE,
            count: _fnSignal((p0)=>p0.count, [
                store
            ], "p0.count"),
            nested: _fnSignal((p0)=>p0.nested.count, [
                store
            ], "p0.nested.count"),
            signal: _IMMUTABLE,
            store: _fnSignal((p0)=>p0.stuff + 12, [
                store
            ], "p0.stuff+12"),
            value: _fnSignal((p0)=>p0.formData?.get('username'), [
                signal
            ], 'p0.formData?.get("username")')
        }
    }, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;yCAG8B;IAC1B,MAAM,QAAQ,SAAS;QACnB,OAAO;QACP,OAAO;QACP,QAAQ;YACJ,OAAO;QACX;IACJ;IACA,MAAM,SAAS,UAAU;IACzB,qBACI,MAAC;QACG,MAAmB;YACnB;mBAAO,MAAM,KAAK;;YAClB;mBAAQ,MAAM,MAAM,CAAC,KAAK;;QAC1B,QAAQ;YACR;mBAAO,MAAM,KAAK,GAAG;;YACrB;mBAAO,OAAO,QAAQ,EAAE,IAAI;;;YAL5B,IAAI;YACJ,KAAK,kBAAE,GAAM,KAAK;;;YAClB,MAAM,kBAAE,GAAM,MAAM,CAAC,KAAK;;;YAC1B,MAAM;YACN,KAAK,kBAAE,GAAM,KAAK,GAAG;;;YACrB,KAAK,kBAAE,GAAO,QAAQ,EAAE,IAAI;;;;;AAIxC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    546
  ]
}
*/
== DIAGNOSTICS ==

[]
