packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_immutable_analysis.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2025
expression: output
---
==INPUT==


import { component$, useStore, $ } from '@khulnasoft.com/qwik';
import importedValue from 'v';
import styles from './styles.module.css';

export const App = component$((props) => {
    const {Model} = props;
    const state = useStore({count: 0});
    const remove = $((id: number) => {
        const d = state.data;
        d.splice(
          d.findIndex((d) => d.id === id),
          1
        )
      });
    return (
        <>
            <p class="stuff" onClick$={props.onClick$}>Hello Qwik</p>
            <Div
                class={styles.foo}
                document={window.document}
                onClick$={props.onClick$}
                onEvent$={() => console.log('stuff')}
                transparent$={() => {console.log('stuff')}}
                immutable1="stuff"
                immutable2={{
                    foo: 'bar',
                    baz: importedValue ? true : false,
                }}
                immutable3={2}
                immutable4$={(ev) => console.log(state.count)}
                immutable5={[1, 2, importedValue, null, {}]}
            >
                <p>Hello Qwik</p>
            </Div>
            [].map(() => (
                <Model
                    class={state}
                    remove$={remove}
                    mutable1={{
                        foo: 'bar',
                        baz: state.count ? true : false,
                    }}
                    mutable2={(() => console.log(state.count))()}
                    mutable3={[1, 2, state, null, {}]}
                />
            ));
        </>
    );
});

============================= test.tsx_App_component_Fragment_Div_onEvent_zrFduYbT3xM.js (ENTRY POINT)==

export const App_component_Fragment_Div_onEvent_zrFduYbT3xM = ()=>console.log('stuff');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"8DAsB0B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Fragment_Div_onEvent_zrFduYbT3xM",
  "entry": null,
  "displayName": "test.tsx_App_component_Fragment_Div_onEvent",
  "hash": "zrFduYbT3xM",
  "canonicalFilename": "test.tsx_App_component_Fragment_Div_onEvent_zrFduYbT3xM",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "onEvent$",
  "captures": false,
  "loc": [
    665,
    691
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAKA,OAAO,MAAM,oBAAM,iHA4ChB\"}")
============================= test.tsx_App_component_Fragment_Div_immutable4_2zF7jA3Yti0.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/qwik";
export const App_component_Fragment_Div_immutable4_2zF7jA3Yti0 = (ev)=>{
    const [state] = useLexicalScope();
    return console.log(state.count);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";iEA8B6B,CAAC;;WAAO,QAAQ,GAAG,CAAC,MAAM,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Fragment_Div_immutable4_2zF7jA3Yti0",
  "entry": null,
  "displayName": "test.tsx_App_component_Fragment_Div_immutable4",
  "hash": "2zF7jA3Yti0",
  "canonicalFilename": "test.tsx_App_component_Fragment_Div_immutable4_2zF7jA3Yti0",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "immutable4$",
  "captures": true,
  "loc": [
    984,
    1016
  ]
}
*/
============================= test.tsx_App_component_Fragment_Div_transparent_eeDEK6EM1oo.js (ENTRY POINT)==

export const App_component_Fragment_Div_transparent_eeDEK6EM1oo = ()=>{
    console.log('stuff');
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"kEAuB8B;IAAO,QAAQ,GAAG,CAAC;AAAQ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Fragment_Div_transparent_eeDEK6EM1oo",
  "entry": null,
  "displayName": "test.tsx_App_component_Fragment_Div_transparent",
  "hash": "eeDEK6EM1oo",
  "canonicalFilename": "test.tsx_App_component_Fragment_Div_transparent_eeDEK6EM1oo",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "jSXProp",
  "ctxName": "transparent$",
  "captures": false,
  "loc": [
    723,
    751
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@khulnasoft.com/qwik/jsx-runtime";
import { _IMMUTABLE } from "@khulnasoft.com/qwik";
import { _fnSignal } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import importedValue from "v";
import { qrl } from "@khulnasoft.com/qwik";
import styles from "./styles.module.css";
import { useStore } from "@khulnasoft.com/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    const state = useStore({
        count: 0
    });
    const remove = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_remove_pU6yOC5P6sY"), "App_component_remove_pU6yOC5P6sY", [
        state
    ]);
    return /*#__PURE__*/ _jsxC(_Fragment, {
        children: [
            /*#__PURE__*/ _jsxQ("p", {
                onClick$: props.onClick$
            }, {
                class: "stuff"
            }, "Hello Qwik", 2, null),
            /*#__PURE__*/ _jsxC(Div, {
                get class () {
                    return styles.foo;
                },
                get document () {
                    return window.document;
                },
                onClick$: props.onClick$,
                onEvent$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Fragment_Div_onEvent_zrFduYbT3xM"), "App_component_Fragment_Div_onEvent_zrFduYbT3xM"),
                transparent$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Fragment_Div_transparent_eeDEK6EM1oo"), "App_component_Fragment_Div_transparent_eeDEK6EM1oo"),
                immutable1: "stuff",
                immutable2: {
                    foo: 'bar',
                    baz: importedValue ? true : false
                },
                immutable3: 2,
                immutable4$: /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Fragment_Div_immutable4_2zF7jA3Yti0"), "App_component_Fragment_Div_immutable4_2zF7jA3Yti0", [
                    state
                ]),
                immutable5: [
                    1,
                    2,
                    importedValue,
                    null,
                    {}
                ],
                children: /*#__PURE__*/ _jsxQ("p", null, null, "Hello Qwik", 3, null),
                [_IMMUTABLE]: {
                    class: _IMMUTABLE,
                    document: _IMMUTABLE,
                    onEvent$: _IMMUTABLE,
                    transparent$: _IMMUTABLE,
                    immutable1: _IMMUTABLE,
                    immutable2: _IMMUTABLE,
                    immutable3: _IMMUTABLE,
                    immutable4$: _IMMUTABLE,
                    immutable5: _IMMUTABLE
                }
            }, 2, "u6_0"),
            "[].map(() => (",
            /*#__PURE__*/ _jsxC(props.Model, {
                class: state,
                remove$: remove,
                get mutable1 () {
                    return {
                        foo: 'bar',
                        baz: state.count ? true : false
                    };
                },
                mutable2: (()=>console.log(state.count))(),
                mutable3: [
                    1,
                    2,
                    state,
                    null,
                    {}
                ],
                [_IMMUTABLE]: {
                    class: _IMMUTABLE,
                    remove$: _IMMUTABLE,
                    mutable1: _fnSignal((p0)=>({
                            foo: 'bar',
                            baz: p0.count ? true : false
                        }), [
                        state
                    ], '{foo:"bar",baz:p0.count?true:false}'),
                    mutable3: _IMMUTABLE
                }
            }, 3, "u6_1"),
            "));"
        ]
    }, 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;yCAK8B,CAAC;IAE3B,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,MAAM;;;IAON,qBACI;;0BACI,MAAC;gBAAgB,UAAU,MAAM,QAAQ;;gBAAtC,OAAM;eAAkC;0BAC3C,MAAC;oBACG;2BAAO,OAAO,GAAG;;oBACjB;2BAAU,OAAO,QAAQ;;gBACzB,UAAU,MAAM,QAAQ;gBACxB,QAAQ;gBACR,YAAY;gBACZ,YAAW;gBACX,YAAY;oBACR,KAAK;oBACL,KAAK,gBAAgB,OAAO;gBAChC;gBACA,YAAY;gBACZ,WAAW;;;gBACX,YAAY;oBAAC;oBAAG;oBAAG;oBAAe;oBAAM,CAAC;iBAAE;0BAE3C,cAAA,MAAC,iBAAE;;oBAdH,KAAK;oBACL,QAAQ;oBAER,QAAQ;oBACR,YAAY;oBACZ,UAAU;oBACV,UAAU;oBAIV,UAAU;oBACV,WAAW;oBACX,UAAU;;;YAGR;0BAEF,MA9BI,MAAT;gBA+BS,OAAO;gBACP,SAAS;oBACT;2BAAU;wBACN,KAAK;wBACL,KAAK,MAAM,KAAK,GAAG,OAAO;oBAC9B;;gBACA,UAAU,CAAC,IAAM,QAAQ,GAAG,CAAC,MAAM,KAAK,CAAC;gBACzC,UAAU;oBAAC;oBAAG;oBAAG;oBAAO;oBAAM,CAAC;iBAAE;;oBAPjC,KAAK;oBACL,OAAO;oBACP,QAAQ,kBAAE,CAAA;4BACN,KAAK;4BACL,KAAK,GAAM,KAAK,GAAG,OAAO;wBAC9B,CAAA;;;oBAEA,QAAQ;;;YACV;;;AAIlB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    166,
    1591
  ]
}
*/
============================= test.tsx_App_component_remove_pU6yOC5P6sY.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/qwik";
export const App_component_remove_pU6yOC5P6sY = (id)=>{
    const [state] = useLexicalScope();
    const d = state.data;
    d.splice(d.findIndex((d)=>d.id === id), 1);
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gDAQqB,CAAC;;IACd,MAAM,IAAI,MAAM,IAAI;IACpB,EAAE,MAAM,CACN,EAAE,SAAS,CAAC,CAAC,IAAM,EAAE,EAAE,KAAK,KAC5B\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_remove_pU6yOC5P6sY",
  "entry": null,
  "displayName": "test.tsx_App_component_remove",
  "hash": "pU6yOC5P6sY",
  "canonicalFilename": "test.tsx_App_component_remove_pU6yOC5P6sY",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    267,
    405
  ]
}
*/
== DIAGNOSTICS ==

[]
