packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_invalid_references.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 859
expression: output
---
==INPUT==


import { $, component$ } from '@khulnasoft.com/qwik';

const I1 = 12;
const [I2, {I3, v1: [I4], I5=v2, ...I6}, I7=v3, ...I8] = obj;
function I9() {}
class I10 {}

export const App = component$(({count}) => {
    console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
    console.log(itsok, v1, v2, v3, obj);
    return $(() => {
        return (
            <I10></I10>
        )
    });
})

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
const I1 = 12;
const [I2, { I3, v1: [I4], I5 = v2, ...I6 }, I7 = v3, ...I8] = obj;
function I9() {}
class I10 {
}
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0"));
export { I1 as _auto_I1 };
export { I10 as _auto_I10 };
export { I2 as _auto_I2 };
export { I3 as _auto_I3 };
export { I4 as _auto_I4 };
export { I5 as _auto_I5 };
export { I6 as _auto_I6 };
export { I7 as _auto_I7 };
export { I8 as _auto_I8 };
export { I9 as _auto_I9 };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,MAAM,KAAK;AACX,MAAM,CAAC,IAAI,EAAC,EAAE,EAAE,IAAI,CAAC,GAAG,EAAE,KAAG,EAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,GAAG;AACzD,SAAS,MAAM;AACf,MAAM;AAAK;AAEX,OAAO,MAAM,oBAAM,iHAQjB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _auto_I1 as I1 } from "./test";
import { _auto_I2 as I2 } from "./test";
import { _auto_I3 as I3 } from "./test";
import { _auto_I4 as I4 } from "./test";
import { _auto_I5 as I5 } from "./test";
import { _auto_I6 as I6 } from "./test";
import { _auto_I7 as I7 } from "./test";
import { _auto_I8 as I8 } from "./test";
import { _auto_I9 as I9 } from "./test";
import { qrl } from "@khulnasoft.com/qwik";
export const App_component_ckEPmXZlub0 = (props)=>{
    console.log(I1, I2, I3, I4, I5, I6, I7, I8, I9);
    console.log(itsok, v1, v2, v3, obj);
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_1_w0t0o3QMovU"), "App_component_1_w0t0o3QMovU");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;yCAQ8B;IAC1B,QAAQ,GAAG,CAAC,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI,IAAI;IAC5C,QAAQ,GAAG,CAAC,OAAO,IAAI,IAAI,IAAI;IAC/B;AAKJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    191,
    381
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _auto_I10 as I10 } from "./test";
import { _jsxC } from "@khulnasoft.com/qwik";
export const App_component_1_w0t0o3QMovU = ()=>{
    return /*#__PURE__*/ _jsxC(I10, null, 3, "u6_0");
};
export { _hW } from "@khulnasoft.com/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2CAWa;IACL,qBACI,MAAC;AAET\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    313,
    377
  ]
}
*/
== DIAGNOSTICS ==

[]
